--- a/baseframe/static/sass/baseframe-material/_layout.scss
+++ b/baseframe/static/sass/baseframe-material/_layout.scss
@@ -197,6 +197,7 @@ blockquote {
 
 .markdown {
   overflow-wrap: break-word;
+  overflow: auto;
 
   h1,
   h2,
@@ -214,6 +215,11 @@ blockquote {
     color: inherit;
   }
 
+  ul,
+  ol {
+    padding-left: 30px;
+  }
+
   img {
     max-width: 100%;
     display: block;
@@ -226,6 +232,7 @@ blockquote {
     border-spacing: 0;
     margin: 0 0 14px;
     cursor: zoom-in;
+    background: inherit;
 
     th,
     td {
@@ -289,5 +296,6 @@ blockquote {
     margin: 0;
     cursor: default;
     min-width: 100%;
+    padding-right: 16px;
   }
 }
